Minor update - Further progress in all classes and server communication. Builds a new game game on server, with new deck, dealth hands, and folding/betting and calling working for the first round. Up to 8 players

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-node-poker-game",
+  "name": "ts-node-poker-game-multiplayer-api-server",
   "version": "1.0.0",
   "description": "",
   "main": "build/index.js",
